# lagrangian_nns

./: .pre-commit-config.yaml  README.md  plotting.py  pyproject.toml  setup.py
notebooks/: BestInitialization.ipynb  BestInitialization.py  DoublePendulum-Baseline.ipynb  DoublePendulum-Baseline.py  DoublePendulum.ipynb  DoublePendulum.py  HyperparameterSearch.ipynb  HyperparameterSearch.py  SpecialRelativity-HNN-CorrectP.ipynb  SpecialRelativity-HNN-CorrectP.py  SpecialRelativity-HNN.ipynb  SpecialRelativity-HNN.py  SpecialRelativity.ipynb  SpecialRelativity.py  WaveEquation.ipynb  WaveEquation.py  auto_trainer.py  convert_init_output.py
src/: __init__.py  lnn.py  models.py  plotting.py  utils.py
src/experiment_dblpend/: __init__.py  data.py  physics.py  train.py
src/hyperopt/: HyperparameterSearch.py  batch_run_hyperopt.sh  example.py  print_best_model.py
