[project]
name = "lagrangian-nns"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "MilesCranmer", email = "miles.cranmer@gmail.com" }
]
dependencies = [
    "jax>=0.4.30",
    "numpy>=2.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyter>=1.0.0",
    "ipython>=8.25.0",
    "ipykernel>=6.29.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lagrangian_nns"]
