[project]
name = "lnn"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "MilesCranmer", email = "miles.cranmer@gmail.com" }
]
dependencies = [
    "jax>=0.4.30",
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyter>=1.0.0",
    "ipython>=8.25.0",
    "ipykernel>=6.29.4",
    "ruff==0.4.10",
]

[tool.ruff]
extend-include = ["*.ipynb"]
